# gmsh_utils

./: .gitignore  Author.md  README.md  create_embankment.py  embankment_functions.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/: CODEOWNERS
.github/workflows/: tests.yml
gmsh_utils/: __version__.py  gmsh_IO.py  math_utils.py
run_gmsh/: demo_create_gmshIO.py  demo_create_gmsh_mesh.py  rail.geo  twoBlocks.msh
stem/: gmsh_IO.py
tests/: test_create_gmshIO.py  test_gmsh_IO.py  test_math_utils.py  utils.py
tests/test_data/: block_2D.geo  block_2D.msh  block_3D.msh  column_2D.geo  column_2D_more_groups.geo  expected_mesh_line.msh  expected_second_order_mesh_data_2D_semi_structured.json  expected_second_order_mesh_data_3D.json  expected_second_order_mesh_data_3D_linux.json  expected_second_order_mesh_data_3D_structured.json  geometryGmsh_lnx.msh  geometryGmsh_windows.msh  mesh_data_2D.pkl  mesh_data_3D.pkl  mesh_data_3D_linux.pkl  mesh_data_3D_windows.pkl  rail.msh  rect2D_lnx.geo  rect3D_lnx.geo  rect3D_lnx.msh  twoBlocks.geo  twoBlocksSlope.geo  twoBlocksSlope_win.msh
tests/test_data/tmp/: rect2D_lnx_bi.geo  rect2D_lnx_occ.geo  rect2D_wnd_bi.geo  rect2D_wnd_occ.geo  rect3D_lnx_occ.geo  rect3D_lnx_occ.msh  rect3D_wnd_occ.geo  rect3D_wnd_occ.msh  twoBlocks_wnd_bi.geo  twoBlocks_wnd_bi.msh  twoBlocks_wnd_occ.geo  twoBlocks_wnd_occ.msh
