[metadata]
name = gmsh_utils
version = attr: gmsh_utils.__version__
author = attr: gmsh_utils.__author__
description = Utilities for gmsh
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3
    Operating System :: OS Independent

[options]
packages = gmsh_utils
include_package_data = True
install_requires =
    gmsh==4.11
python_requires = >=3.8

[options.extras_require]
testing =
    numpy>=1.24
    pytest>=7.2
    pytest-cov>=4.0
    tox>=4.4
    mypy>=1.1